Add margin above preview and download buttons

--- a/src/templates/stats.jade
+++ b/src/templates/stats.jade
@@ -28,6 +28,7 @@ style.
 	}
 	#buttons {
 		display: none;
+		margin-top: 10px;
 		text-align: center;
 		vertical-align: middle;
 		line-height: 64px;
