Visualise peer upload and download speeds

--- a/src/templates/stats.jade
+++ b/src/templates/stats.jade
@@ -62,10 +62,10 @@ style.
 div.centered
 	p#speeds
 		span.speed-label Up:
-		span.speed#upload-speed 0
+		span.speed#upload-speed 0 bytes/s
 		br
 		span.speed-label Down:
-		span.speed#download-speed 0
+		span.speed#download-speed 0 bytes/s
 	div#buttons
 		div#preview-button.button
 			i.fa.fa-eye
